--- a/Soil-Data-Extraction.html
+++ b/Soil-Data-Extraction.html
@@ -174,30 +174,69 @@ pre code {
 <li>Possible options to move forward include:
 <ul>
 <li>Maybe I could actually convert them in ArcMap to another format?</li>
-<li>Extracting data from rasters(?) for gps points and exporting into csv format for analyses in OSX using ArcMap.</li>
-<li>Look for alternative soils data that are in another format</li>
+<li><strong>Extracting data from rasters for gps points and exporting into .csv format using arcGIS for analyses in OSX.</strong></li>
+<li>Look for alternative soils data that are in another format?</li>
 </ul></li>
 </ul>
 <p>Below are the methods I used to extract the soils data for the GPS points.</p>
-<ul>
-<li>Procedure:
+<div id="download-data" class="section level2">
+<h2>Download Data</h2>
 <ul>
 <li>Download gSSURGO data from the <a href="https://gdg.sc.egov.usda.gov/GDGHome_DirectDownLoad.aspx">USDA Geospatial Data Gateway</a>
 <ul>
 <li>click on the link to ‘Soils’ - Redirects you to a the <a href="https://nrcs.app.box.com/v/soils">NRCS Box Folder</a></li>
 <li>I downloaded OR and WA data from the folder ‘October 2021 gSSURGO by State’.</li>
-<li>Working with gSSURGO data is kind of ackward because you have to join tables of interest to the base raster file before you can map those table variables.</li>
+<li>Working with gSSURGO data is kind of akward because you have to join tables of interest to the base raster file before you can map those table variables.</li>
 </ul></li>
-<li>ArcMap procedure
+</ul>
+</div>
+<div id="wrangle-shapefiles-in-arcgis-pro" class="section level2">
+<h2>Wrangle Shapefiles in ArcGIS Pro</h2>
+<div id="add-data-layers" class="section level3">
+<h3>Add Data Layers</h3>
 <ul>
 <li>Add Data
 <ul>
-<li>Add MapunitRaster_10m for each state, rename content based on state</li>
-<li>Add muaggatt attribute table for each state, rename content based on state</li>
+<li>Add MapunitRaster_10m for each state, rename content based on state
+<ul>
+<li>Note ArcGIS Pro was doing a weird thing where after opening gps csv, it wouldn’t recognize lat/long columns the next time I tried to add it as a layer.</li>
 </ul></li>
+<li>Add GPS points wrangled from data downloaded from iNaturalist project</li>
+</ul></li>
+</ul>
+</div>
+<div id="subset-data" class="section level3">
+<h3>Subset Data</h3>
+<ul>
+<li>Subset Data (needed to avoid insufficient memory error)
+<ul>
+<li>Add soils polygons for each state MUPOLYGON
+<ul>
+<li>Rename polygon for each state (e.g. WA MUPolygon)</li>
+</ul></li>
+<li>Use select by location for Tree GPS points
+<ul>
+<li>Input features - gps.csv</li>
+<li>Relationship - Intersect</li>
+<li>Selecting Features - WA MUPOLYGON</li>
+<li>Selection type - New Selection</li>
+</ul></li>
+<li>Save selected
+<ul>
+<li>Right click point layer -&gt; Selection -&gt; Make layer from selected features</li>
+<li>Rename layer (e.g. Washington GPS Points)</li>
+</ul></li>
+</ul></li>
+</ul>
+</div>
+<div id="join-data" class="section level3">
+<h3>Join Data</h3>
+<ul>
 <li>Join Data (Follow gSSUGO User Guide for joining Data) - complete for each state
 <ul>
-<li>Click on aggregated attribute table, select data ribbon, click joins.
+<li>Muaggatt data
+<ul>
+<li>right click raster -&gt; select Joins and relates -&gt; Add Join
 <ul>
 <li>Input: OR MapunitRaster_10m</li>
 <li>Input Join Field: MUKEY</li>
@@ -205,6 +244,55 @@ pre code {
 <li>Join Table Field: MUKEY</li>
 </ul></li>
 </ul></li>
+<li>Repeat with Component TAble
+<ul>
+<li>This time use Input Join Field ‘MUPOLYGON.MUKEY’</li>
+</ul></li>
+<li>(Optional) Not recommended though -too much data - Repeat with Chorizon Table
+<ul>
+<li>Use Component.cokey and Component Key as Join Fields</li>
+</ul></li>
+<li>(Optional) Note the same process can be followed for adding table data to the shape file (MUPOLYGON).
+<ul>
+<li>Directions for using shapefiles are available here <a href="https://youtu.be/zGfT1v8Fmug">YouTube Video</a>
+<ul>
+<li>This process also involves Dissolve to Dissolve Shapefile by MUKEY - split rows with same MUKEY values?</li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul>
+</div>
+<div id="extract-data-for-points" class="section level3">
+<h3>Extract data for points</h3>
+<ul>
+<li>Extract raster data for points
+<ul>
+<li>followed directions here <a href="https://support.esri.com/en/technical-article/000022163" class="uri">https://support.esri.com/en/technical-article/000022163</a>
+<ul>
+<li>Note need to subset data to avoid ‘ERROR 010005: unable to allocate memory’</li>
+<li>Extract Values to Points (Search to find tool) - you will need Liscense for Spatial Analyst Tools)</li>
+<li>Input Point Feature - Washington GPS Points</li>
+<li>Input Raster - WA MapunitRaster_10m 2</li>
+<li>Output Point Features - extract_GPS_Washington
+<ul>
+<li>Check ‘Interpolate values at the point locations’ (note, I am not sure if this is the best choice)</li>
+<li>Check ‘Append all the input raster attributes to the output point features’</li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul>
+</div>
+<div id="export-data-to-table" class="section level3">
+<h3>Export Data to table</h3>
+<ul>
+<li>Export GPS data with soils data as .csv + Right click layer created above (Extract_GPS_Washington) -&gt; Data -&gt; Export Table + Inpout rows - Extract_GPS_Washington + browse to folder to save file (e.g. redcedar/serverfiles/data) + be sure to add ‘.csv’ to end of file name (e.g. Washington_GPS_Soils_Data_muaggatt_component.csv)</li>
+</ul>
+</div>
+<div id="visualize-shape-files" class="section level3">
+<h3>Visualize Shape Files</h3>
+<ul>
+<li>(Optional) Visualize raster data
+<ul>
 <li>Change symbology of raster files
 <ul>
 <li>right click layer and select symbology
@@ -212,14 +300,10 @@ pre code {
 <li>select classify then change field to bedrock depth or other variable of interest.</li>
 </ul></li>
 </ul></li>
-<li>Extract raster data for points
-<ul>
-<li>followed directions here <a href="https://support.esri.com/en/technical-article/000022163" class="uri">https://support.esri.com/en/technical-article/000022163</a></li>
-<li>may have to export raster and do next steps in qgis though.</li>
-</ul></li>
-</ul></li>
 </ul></li>
 </ul>
+</div>
+</div>
 
 
 
