--- a/analyses/inat/iNat-Data-Analysis.html
+++ b/analyses/inat/iNat-Data-Analysis.html
@@ -188,71 +188,8 @@ pre code {
 ##   &lt;fct&gt;                      &lt;int&gt;
 ## 1 Healthy                      813
 ## 2 Unhealthy                    695</code></pre>
-<pre><code>##  [1] &quot;id&quot;                                                                                     
-##  [2] &quot;observed_on_string&quot;                                                                     
-##  [3] &quot;observed_on&quot;                                                                            
-##  [4] &quot;time_observed_at&quot;                                                                       
-##  [5] &quot;time_zone&quot;                                                                              
-##  [6] &quot;user_id&quot;                                                                                
-##  [7] &quot;user_login&quot;                                                                             
-##  [8] &quot;created_at&quot;                                                                             
-##  [9] &quot;updated_at&quot;                                                                             
-## [10] &quot;quality_grade&quot;                                                                          
-## [11] &quot;license&quot;                                                                                
-## [12] &quot;url&quot;                                                                                    
-## [13] &quot;image_url&quot;                                                                              
-## [14] &quot;sound_url&quot;                                                                              
-## [15] &quot;tag_list&quot;                                                                               
-## [16] &quot;description&quot;                                                                            
-## [17] &quot;num_identification_agreements&quot;                                                          
-## [18] &quot;num_identification_disagreements&quot;                                                       
-## [19] &quot;captive_cultivated&quot;                                                                     
-## [20] &quot;oauth_application_id&quot;                                                                   
-## [21] &quot;place_guess&quot;                                                                            
-## [22] &quot;latitude&quot;                                                                               
-## [23] &quot;longitude&quot;                                                                              
-## [24] &quot;positional_accuracy&quot;                                                                    
-## [25] &quot;private_place_guess&quot;                                                                    
-## [26] &quot;private_latitude&quot;                                                                       
-## [27] &quot;private_longitude&quot;                                                                      
-## [28] &quot;public_positional_accuracy&quot;                                                             
-## [29] &quot;geoprivacy&quot;                                                                             
-## [30] &quot;taxon_geoprivacy&quot;                                                                       
-## [31] &quot;coordinates_obscured&quot;                                                                   
-## [32] &quot;positioning_method&quot;                                                                     
-## [33] &quot;positioning_device&quot;                                                                     
-## [34] &quot;place_town_name&quot;                                                                        
-## [35] &quot;place_county_name&quot;                                                                      
-## [36] &quot;place_state_name&quot;                                                                       
-## [37] &quot;place_country_name&quot;                                                                     
-## [38] &quot;place_admin1_name&quot;                                                                      
-## [39] &quot;place_admin2_name&quot;                                                                      
-## [40] &quot;species_guess&quot;                                                                          
-## [41] &quot;scientific_name&quot;                                                                        
-## [42] &quot;common_name&quot;                                                                            
-## [43] &quot;iconic_taxon_name&quot;                                                                      
-## [44] &quot;taxon_id&quot;                                                                               
-## [45] &quot;field.tree.canopy.symptoms&quot;                                                             
-## [46] &quot;field.optional...did.the.tree.have.heat.damage&quot;                                         
-## [47] &quot;field.percent.canopy.affected....&quot;                                                      
-## [48] &quot;field.number.of.additional.unhealthy.trees..of.same.species..in.area..within.sight.&quot;    
-## [49] &quot;field.percent.of.trees..of.same.species..within.sight.that.are.unhealthy&quot;               
-## [50] &quot;field.other.factors...are.there.signs.or.symptoms.of.insect..diseases..or.other.damage.&quot;
-## [51] &quot;field.optional...what..other.factors..were.observed.&quot;                                   
-## [52] &quot;field.optional...tree.size&quot;                                                             
-## [53] &quot;field.optional...site.type&quot;                                                             
-## [54] &quot;field.optional...site.location.description&quot;                                             
-## [55] &quot;field.optional...site.area.disturbance.level&quot;                                           
-## [56] &quot;field.optional...site.hydrology&quot;                                                        
-## [57] &quot;field.optional...access.to.water&quot;                                                       
-## [58] &quot;field.optional...slope.position&quot;                                                        
-## [59] &quot;field.optional...were.there.any.other.unhealthy.plant.species.on.the.site.&quot;             
-## [60] &quot;field.optional...timing.of.symptoms.estimate&quot;                                           
-## [61] &quot;field.optional...estimated.time.spent.to.make.this.observation....of.minutes.&quot;          
-## [62] &quot;field.optional...can.we.follow.up.with.you.&quot;                                            
-## [63] &quot;field.notes&quot;</code></pre>
 <ul>
-<li>Note the following fields were removed because they’re not explanitory variables for the below model
+<li>Note the following fields were removed because they’re not explanatory variables for the below model
 <ul>
 <li>“field.optional…were.there.any.other.unhealthy.plant.species.on.the.site.”<br />
 </li>
