Updated front facing github pages

--- a/data-wrangle/index.html
+++ b/data-wrangle/index.html
@@ -380,8 +380,7 @@ University</h4>
 <tbody>
 <tr class="odd">
 <td align="center"><a href="https://jmhulbert.github.io/redcedar">Home</a></td>
-<td align="center"><a href="./data-wrangle/Data-Wrangle-v1.html">Data
-Wrangling</a></td>
+<td align="center"><a href="./data-wrangle/">Data Wrangling</a></td>
 <td align="center"><a href="./analyses/">Data Analyses</a></td>
 <td align="center"><a href="./data-visualization/">Data
 Visualization</a></td>
@@ -419,51 +418,40 @@ Data</a></li>
 </div>
 <div id="datasets" class="section level1">
 <h1>Datasets</h1>
-<div id="inat-data---empirical-tree-points" class="section level2">
-<h2>iNat Data - Empirical Tree Points</h2>
+<div id="inat-data---empirical-tree-points" class="section level3">
+<h3>iNat Data - Empirical Tree Points</h3>
 <p>Data were downloaded from the <a href="https://www.inaturalist.org/projects/western-redcedar-dieback-map">Wester
 Redcedar Dieback Map</a> project after 1500 observations were
 shared.</p>
 <p>These data were then subset to include only gps information to use in
 collecting ancillary data.</p>
 </div>
-<div id="ancillary-climate-data" class="section level2">
-<h2>Ancillary Climate Data</h2>
+<div id="ancillary-data" class="section level3">
+<h3>Ancillary Data</h3>
+<div id="climate-data" class="section level4">
+<h4>Climate Data</h4>
 <p>Data were downloaded for the iNat GPS locations using the ClimateNA
 Tool. Instructions are available in the <a href="./data-wrangle/climate/Climate-Data-Extraction.html">Climate Data
 Wrangle</a> file.</p>
 <p>There were many time series (different intervals where data were
-averaged) of the downscaled climate variables available.</p>
-<ul>
-<li>Grouping explored
-<ul>
-<li>data averaged over 30 year normals (1991-2020)
-<ul>
-<li>Monthly</li>
-<li>Seasonal</li>
-<li>Annual</li>
-</ul></li>
-<li>data averaged over last decade (2011-2020)
-<ul>
-<li>Monthly</li>
-<li>Seasonal</li>
-<li>Annual</li>
-</ul></li>
-</ul></li>
-</ul>
+averaged) of the downscaled climate variables available. * Grouping
+explored + data averaged over 30 year normals (1991-2020) + Monthly +
+Seasonal + Annual + data averaged over last decade (2011-2020) + Monthly
++ Seasonal + Annual</p>
 </div>
-<div id="ancillary-topography-data" class="section level2">
-<h2>Ancillary Topography Data</h2>
+<div id="topography-data" class="section level4">
+<h4>Topography Data</h4>
 <p>Ancillary Topographic data were calculated and extracted for iNat GPS
 points in ArcGIS. The methods are described in the <a href="./data-wrangle/topo/Topo-Data-Extraction---ArcGIS.html">Topography
 Data Wrangle</a> file.</p>
 </div>
-<div id="ancillary-soils-data" class="section level2">
-<h2>Ancillary Soils Data</h2>
+<div id="soils-data" class="section level4">
+<h4>Soils Data</h4>
 <p>gSURRGO data were downloaded for states containing iNAT observations.
 Instructions for extracting the soils data using Arc GIS Pro are
 included in the <a href="./data-wrangle/soils/Soil-Data-Extraction.html">Soils Data
 Wrangle</a> file.</p>
+</div>
 </div>
 </div>
 
