--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ pre code {
 Analyses</h1>
 <h4 class="author">Prepared by Joey Hulbert, Washington State
 University</h4>
-<h4 class="date">July, 2022 (in progress)</h4>
+<h4 class="date">June, 2022 (in progress)</h4>
 
 </div>
 
@@ -381,8 +381,7 @@ University</h4>
 <tbody>
 <tr class="odd">
 <td align="center"><a href="https://jmhulbert.github.io/redcedar">Home</a></td>
-<td align="center"><a href="./data-wrangle/Data-Wrangle-v1.html">Data
-Wrangling</a></td>
+<td align="center"><a href="./data-wrangle/">Data Wrangling</a></td>
 <td align="center"><a href="./analyses/">Data Analyses</a></td>
 <td align="center"><a href="./data-visualization/">Data
 Visualization</a></td>
