--- a/data-visualization/index.html
+++ b/data-visualization/index.html
@@ -380,9 +380,11 @@ University</h4>
 <tbody>
 <tr class="odd">
 <td align="center"><a href="https://jmhulbert.github.io/redcedar">Home</a></td>
-<td align="center"><a href="./data-wrangle/">Data Wrangling</a></td>
-<td align="center"><a href="./analyses/">Data Analyses</a></td>
-<td align="center"><a href="./data-visualization/">Data
+<td align="center"><a href="https://jmhulbert.github.io/redcedar/data-wrangle/">Data
+Wrangling</a></td>
+<td align="center"><a href="https://jmhulbert.github.io/redcedar/analyses/">Data
+Analyses</a></td>
+<td align="center"><a href="https://jmhulbert.github.io/redcedar/data-visualization/">Data
 Visualization</a></td>
 </tr>
 <tr class="even">
