Updated url links of data-visualization page

--- a/data-visualization/index.html
+++ b/data-visualization/index.html
@@ -402,16 +402,14 @@ Visualization</a></td>
 <ul>
 <li><a href="./data-visualization/">Overview</a>
 <ul>
-<li><a href="./data-visualization/inat/iNat-Data-Visualization.html">iNat
-Data</a></li>
+<li><a href="./inat/iNat-Data-Visualization.html">iNat Data</a></li>
 <li>Environmental Data
 <ul>
-<li><a href="./data-visualization/climate/Climate-Data-Visualization.html">Climate
+<li><a href="./climate/Climate-Data-Visualization.html">Climate
 Data</a></li>
-<li><a href="./data-visualization/topo/Topo-Data-Visualization.html">Topography
+<li><a href="./topo/Topo-Data-Visualization.html">Topography
 Data</a></li>
-<li><a href="./data-visualization/soils/Soils-Data-Visualization.html">Soils
-Data</a></li>
+<li><a href="./soils/Soils-Data-Visualization.html">Soils Data</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
