updated url links on data-visualization, data-wrangle and analyses instruction pages

--- a/analyses/index.html
+++ b/analyses/index.html
@@ -400,26 +400,24 @@ Visualization</a></td>
 <ul>
 <li>Methods
 <ul>
-<li><a href="./analyses/">Overview</a>
+<li><a href="./">Overview</a>
 <ul>
-<li><a href="./analyses/inat/iNat-Data-Analysis.html">iNat Data</a></li>
+<li><a href="./inat/iNat-Data-Analysis.html">iNat Data</a></li>
 <li>Environmental Data
 <ul>
 <li>Climate Data
 <ul>
-<li><a href="./analyses/climate/Climate-Data-Analysis---filtered-symptom-response.html">Reclassified
+<li><a href="./climate/Climate-Data-Analysis---filtered-symptom-response.html">Reclassified
 Symptom Response</a></li>
-<li><a href="./analyses/climate/Climate-Data-Analysis---binary-symptom-response.html">Binary
+<li><a href="./climate/Climate-Data-Analysis---binary-symptom-response.html">Binary
 Symptom Response</a></li>
-<li><a href="./analyses/climate/Climate-Data-Analysis---unhealthy-tree-number-response.html">Unhealthy
+<li><a href="./climate/Climate-Data-Analysis---unhealthy-tree-number-response.html">Unhealthy
 Tree Number Response</a></li>
 </ul></li>
-<li><a href="./analyses/topo/Topo-Data-Analysis.html">Topography
-Data</a></li>
-<li><a href="./analyses/soils/Soils-Data-Analysis.html">Soils
-Data</a></li>
+<li><a href="./topo/Topo-Data-Analysis.html">Topography Data</a></li>
+<li><a href="./soils/Soils-Data-Analysis.html">Soils Data</a></li>
 </ul></li>
-<li><a href="./analyses/Full-Environmental-Predictor-Analyses.html"><strong>Combined
+<li><a href="./Full-Environmental-Predictor-Analyses.html"><strong>Combined
 Analyses</strong></a></li>
 </ul></li>
 </ul></li>
