--- a/data-wrangle/index.html
+++ b/data-wrangle/index.html
@@ -402,18 +402,16 @@ community scientists with ancillary environmental data (climate,
 topographic, and soils) to identify important predictors of western
 redcedar dieback.</p>
 <ul>
-<li><a href="./data-wrangle/Data-Wrangle-v1.html">Data Wrangle
-Instructions</a>
+<li><a href="./Data-Wrangle-v1.html">Data Wrangle Instructions</a>
 <ul>
 <li>iNat Data</li>
 <li>Environmental Data
 <ul>
-<li><a href="./data-wrangle/climate/Climate-Data-Extraction.html">Climate
+<li><a href="./climate/Climate-Data-Extraction.html">Climate
 Data</a></li>
-<li><a href="./data-wrangle/topo/Topo-Data-Extraction---ArcGIS.html">Topography
+<li><a href="./topo/Topo-Data-Extraction---ArcGIS.html">Topography
 Data</a></li>
-<li><a href="./data-wrangle/soils/Soil-Data-Extraction.html">Soils
-Data</a></li>
+<li><a href="./soils/Soil-Data-Extraction.html">Soils Data</a></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -433,8 +431,8 @@ collecting ancillary data.</p>
 <div id="climate-data" class="section level4">
 <h4>Climate Data</h4>
 <p>Data were downloaded for the iNat GPS locations using the ClimateNA
-Tool. Instructions are available in the <a href="./data-wrangle/climate/Climate-Data-Extraction.html">Climate Data
-Wrangle</a> file.</p>
+Tool. Instructions are available in the <a href="./climate/Climate-Data-Extraction.html">Climate Data Wrangle</a>
+file.</p>
 <p>There were many time series (different intervals where data were
 averaged) of the downscaled climate variables available. * Grouping
 explored + data averaged over 30 year normals (1991-2020) + Monthly +
@@ -444,14 +442,14 @@ Seasonal + Annual + data averaged over last decade (2011-2020) + Monthly
 <div id="topography-data" class="section level4">
 <h4>Topography Data</h4>
 <p>Ancillary Topographic data were calculated and extracted for iNat GPS
-points in ArcGIS. The methods are described in the <a href="./data-wrangle/topo/Topo-Data-Extraction---ArcGIS.html">Topography
-Data Wrangle</a> file.</p>
+points in ArcGIS. The methods are described in the <a href="./topo/Topo-Data-Extraction---ArcGIS.html">Topography Data
+Wrangle</a> file.</p>
 </div>
 <div id="soils-data" class="section level4">
 <h4>Soils Data</h4>
 <p>gSURRGO data were downloaded for states containing iNAT observations.
 Instructions for extracting the soils data using Arc GIS Pro are
-included in the <a href="./data-wrangle/soils/Soil-Data-Extraction.html">Soils Data
+included in the <a href="./soils/Soil-Data-Extraction.html">Soils Data
 Wrangle</a> file.</p>
 </div>
 </div>
