--- a/data-visualization/index.html
+++ b/data-visualization/index.html
@@ -400,7 +400,7 @@ Visualization</a></td>
 <ul>
 <li>Methods
 <ul>
-<li><a href="./data-visualization/">Overview</a>
+<li><a href="./">Overview</a>
 <ul>
 <li><a href="./inat/iNat-Data-Visualization.html">iNat Data</a></li>
 <li>Environmental Data
